--- a/main.css
+++ b/main.css
@@ -1,8 +1,5 @@
-@font-face {
-    font-family: "Playpen Sans", cursive;
-    src: url('https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&display=swap');
-}
+@import url('https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&display=swap');
 
 body {
-    font-family: "Playpen Sans", cursive;
+    font-family: "Playpen Sans";
 }
