--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&display=swap');
 
 body {
-    font-family: "Playpen Sans";
+    font-family: "Playpen Sans", cursive;
 }
+
