--- a/main.css
+++ b/main.css
@@ -37,6 +37,14 @@ footer a {
   float: right;
 }
 
-
-
-
+@media (max-height: 600px) {
+  header {
+    display: none;
+  }
+  footer {
+    display: none;
+  }
+  main {
+    flex: 1 100vh;
+  }
+}
