include background colors

--- a/main.css
+++ b/main.css
@@ -9,7 +9,8 @@ body {
 }
 
 header {
-    flex: 0 50px;
+    flex: 0 100px;
+    background-color: rgb(108, 177, 237);
 }
 
 menu {
@@ -30,7 +31,7 @@ main {
 
 footer {
     flex: 0 30px;
-
+    background-color: rgb(108, 177, 237);
 }
 
 footer a {
