--- a/main.css
+++ b/main.css
@@ -37,6 +37,10 @@ menu .nav-item {
 
 main {
     flex:1;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
 }
 
 .row-main {
