--- a/main.css
+++ b/main.css
@@ -42,6 +42,7 @@ main {
     flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .row-main {
