--- a/main.css
+++ b/main.css
@@ -67,7 +67,9 @@ main {
 
 .title {
     font-weight: bold;
+}
 
+#title-main {
     animation-name: grow;
     animation-duration: 5s;
 }
@@ -77,7 +79,7 @@ main {
     font-size: 0vh;
   }
   to {
-    font-size: 4.5vh;
+    font-size: 4.3vh;
   }
 }
 
